Bug 1706814 - Allow adding relation providers before dependend content created. r=Jamie

I entirely removed the acceptable child check because that is done later
when the aria-owns is processed.

Differential Revision: https://phabricator.services.mozilla.com/D114779